# ephemeris_generic_example

./: .gitignore  CMakeLists.txt  LICENSE  README.RU.md  README.md  ephemeris_generic_example.cpp  ephemeris_generic_example.sln  ephemeris_generic_example.vcxproj
.github/workflows/: cmake-multi-platform-test.yml  cmake-multi-platform.yml
example_app1/: CMakeLists.txt  ephemeris_generic_example.cpp
example_app2/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  IAARAS_Online_Moon_Geocenter_1788_2213_equatorialXYZVxVyVz.txt  horizons_results_Moon_Geocenter_1550_2650_equatorialXYZVxVyVz.txt  tests_runner.cpp
